# news_scrapper

./: .env.production  .env.template  .gitignore  .gitmodules  README.md  ai_bot.py  correlation_matrix.json  data_20241111.json  docker-compose.yml  news_results.json  news_scraping.py  pyproject.toml  requirements.txt  script.sh  test2.ipynb  test_news_sementic.ipynb
clustering/: Dockerfile  clustering.py  main.py  requirements.txt
clustering/utils/: utils.py
config/: logger.py
data_crawling/: Dockerfile  crawl.py  news_scraping.py  requirements.txt  utils.py
data_crawling/utils/: config.py  utils.py
data_ingestion/: Dockerfile  crawl.py  news_scraping.py  requirements.txt
data_ingestion/Models/: tfidf_vectorizer.pkl  topic_classifier.pkl
database_api/: .env.example  .gitignore  Dockerfile  main.py  requirements.txt
database_api/alembic/versions/: 4af4e57df91a_.py  595a3ef886a9_.py  e121420c7673_.py
database_api/app/: main.py
database_api/app/api/: api_articles.py  api_clustering.py  api_healthcheck.py  api_router.py  api_sentimental.py
database_api/app/core/: config.py
database_api/app/helpers/: exception_handler.py  paging.py
database_api/app/models/: __init__.py  article.py  clustering.py  correlation.py  sentimental.py
database_api/app/schemas/: __init__.py  article_schema.py  base_schema.py
database_api/app/services/: __init__.py  article_service.py  (+2 more)
front-end/news/: package-lock.json  package.json  vite.config.js
mysql_database/: Dockerfile  init.sql
sentimental_analysis/: Dockerfile  main.py  requirements.txt  sentimental.py
(+29 files in other folders)
