[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
mysql-connector-python = "^9.1.0"
fastapi = "^0.115.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
