[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
mysql-connector-python = "^9.1.0"
fastapi = "^0.115.4"
schedule = "^1.2.2"
uvicorn = "^0.32.0"
SQLAlchemy = "^2.0.36"
FastAPI-SQLAlchemy = "^0.2.1"
pydantic-settings = "^2.6.1"
PyMySQL = "^1.1.1"
alembic = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
